<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:textSize="10pt"
        android:layout_margin="10dp"
        android:text="@string/go_back_to_the_denimalz"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/bakso_sapi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_margin="5dp"
        android:textSize="13pt"
        android:text="@string/day6"
        android:id="@+id/title"
        android:fontFamily="@font/bakso_sapi"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11pt"
        android:layout_margin="2dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/bakso_sapi"
        android:text="@string/fandom_my_day"
        android:layout_gravity="center"
        android:id="@+id/subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="7pt"
        android:layout_margin="2dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/bakso_sapi"
        android:text="@string/a_korean_rock_band_that_debuted_on_9_7_2015"
        android:layout_gravity="center"
        android:id="@+id/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="5dp"
        android:id="@+id/scroll"
        app:layout_constraintTop_toBottomOf="@+id/info">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/sungjin"
                android:id="@+id/psj"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:fontFamily="@font/bakso_sapi"
                android:id="@+id/sungjin"
                android:textSize="9pt"/>
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/jae"
                android:id="@+id/pjh"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:textColor="@color/text"
                android:fontFamily="@font/bakso_sapi"
                android:id="@+id/jae"
                android:textSize="9pt"/>
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/youngk"
                android:id="@+id/kyh"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:fontFamily="@font/bakso_sapi"
                android:id="@+id/youngk"
                android:textSize="9pt"/>
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/wonpil"
                android:id="@+id/kwp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:fontFamily="@font/bakso_sapi"
                android:id="@+id/wonpil"
                android:textSize="9pt"/>
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/dowoon"
                android:id="@+id/ydw"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:fontFamily="@font/bakso_sapi"
                android:id="@+id/dowoon"
                android:textSize="9pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/newline"
                android:id="@+id/space"
                android:fontFamily="@font/bakso_sapi"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>